--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">Sobre nosotros</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="principal_servicios.html">Servicios</a></li>
                     
-                    <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">Contactos</a>
+                    <li class="nav-item"><a class="nav-link link text-white display-4" href="contacto.html">Contactos</a>
                     </li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://mobiri.se">Menú</a></div>
