--- a/principal_servicios.html
+++ b/principal_servicios.html
@@ -55,7 +55,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">Sobre nosotros</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="principal_servicios.html">Servicios</a></li>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                     <!--<li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">Sobre nosotros</a></li>-->
+                    <li class="nav-item"><a class="nav-link link text-white display-4" href="principal_servicios.html">Servicios</a></li>
                     
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">Contactos</a>
                     </li></ul>
@@ -98,17 +100,17 @@
             <div class="card col-12 col-md-4 col-lg-2 p-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="alta_cliente1.html"><span class="mbr-iconfont mbri-users"></span></a>
+                        <a href="abm_mesas/principal_mesa.php"><span class="mbr-iconfont mbri-users"></span></a>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                            <strong>Alta Mesas</strong></h4>
+                            <strong>Mesas</strong></h4>
                     </div>
                 </div>
             </div>
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="alta_mozo1.html"><span class="mbr-iconfont mbri-user"></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Alta Mozos</strong></h4>
+                        <a href="abm_mozos/principal_mozo.php"><span class="mbr-iconfont mbri-user"></span></a>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Mozos</strong></h4>
                     </div>
                 </div>
             </div>
@@ -176,7 +178,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/632529" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/632529" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/ytplayer/index.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>  <script src="../assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
