Actualización de archivos

--- a/abm_mozos/alta_mozo1.html
+++ b/abm_mozos/alta_mozo1.html
@@ -88,14 +88,14 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 
-                <form name="Alta Impuestos" action="alta_impuesto2.php" method="post" autocomplete="on" style="height: 10%;">
-                <fieldset> <legend> Carga Impuestos </legend> 
-                    <input placeholder="Nombre del impuesto" required name="nom_impuesto" type="text"> <br>
+                <form name="Alta Impuestos" action="alta_mozo2.php" method="post" autocomplete="on" style="height: 10%;">
+                <fieldset> <legend> Carga Mozo </legend> 
+                    <input placeholder="Nombre del Mozo" required name="nom_mozo" type="text"> <br>
                     <br>
-                    <input step="0.01" placeholder="Porcentaje" required name="porcentaje"  type="number">
+                    <input maxlength="10" placeholder="DNI" required name="DNI"  type="number">
                     <br>
                     <br>
-                    <input type="submit" value="Crear Impuesto" id="submit">
+                    <input type="submit" value="Crear Mozo" id="submit">
                     </fieldset>
                 </form>
 
