Cambios en la plataforma e incorporación del módulo imagen

--- a/abm_imagenes/alta_imagen1.html
+++ b/abm_imagenes/alta_imagen1.html
@@ -18,16 +18,9 @@
       
       <fieldset>
         <legend>Crear Imágen</legend><br>
-        <input type="file" name="foto" value="Cargar imagen" accept=".jpg, .png, .svg"><br>
-          <input type="text" name="nombre_foto" placeholder="Nombre de la imagen"><br>
-          <select name="" id="">
-            <option value="0" selected>elegir</option>
-            <option value="1">--DEFECTO--</option>
-            <option value="2">PRUEBA</option>
-          </select>
-
-
-        <input type="submit" value="Crear Imágen"><br>
+        <input type="text" name="nombre" placeholder="Nombre de Menu"><br><br>
+        <input type="file" name="foto" value="Cargar imagen" accept=".jpg, .png, .svg"><br><br>
+        <input type="submit" value="Cargar Imágen"><br>
       </fieldset>
     </form>
 </body>
